@@ -27,5 +27,6 @@ Nicolas Simonds
 Peter Palfrader
 David F. Skoll
 Bogdan Pintea
+Gerfried Fuchs
 
 $Id$
